# ros2_ws

./: .gitignore  README.md  saved_positions.json
install/: local_setup.sh  setup.sh
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.2
install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
install/micro_ros_agent/lib/pkgconfig/: spdlog.pc
install/micro_ros_agent/share/micro_ros_agent/: local_setup.sh  package.sh
install/micro_ros_msgs/share/micro_ros_msgs/: package.sh
install/my_robot_description/share/my_robot_description/: package.sh
log/: latest_build
src/: requirements.txt
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/config/: my_robot_arm_controllers.yaml
src/my_robot_description/launch/: spawn_robot.launch.py
src/my_robot_description/meshes/: base.stl  link_3_wrist.stl  link_4_wrist.stl
src/my_robot_description/urdf/: my_robot.urdf.xacro  x.txt
src/my_robot_description/worlds/: my_robot.world
src/robot_arm_bridge/: instructions.txt  setup.cfg  setup.py
src/robot_arm_bridge/robot_arm_bridge/: serial_bridge_node.py  web_app.py  web_gui_node.py
src/visiona_bridge/: README.md  setup.cfg  setup.py
src/visiona_bridge/config/: visiona_controllers.yaml
src/visiona_bridge/launch/: spawn_visiona.launch.py
src/visiona_bridge/meshes/: gripper_joint.stl  gripper_left_finger.stl  gripper_left_gear.stl  gripper_right_finger.stl
src/visiona_bridge/urdf/: visiona.ros2_control.xacro  visiona.urdf.xacro  visiona_gazebo.xacro
src/visiona_bridge/visiona_bridge/: bridge_node.py  instructions.txt  web_app.py  web_gui_node.py
(+48 files in other folders)
